--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -22,7 +22,7 @@
 				<div class="card-body">		  
 						<form method="POST" enctype="multipart/form-data">
 							<div class="mb-3">
-								<div class="title mb-2"><i class="lni lni-envelope"></i><span>Choose Documen</span></div>
+								<div class="title mb-2"><i class="lni lni-envelope"></i><span>Choose Document</span></div>
 								<input class="form-control" type="file" id="document" name="document">
 							</div>
 							<div class="mb-3">
@@ -39,7 +39,8 @@
 							</div>
 							<button type="submit" class="btn btn-success w-100">Upload</button>
 						 </form>
-			
+				</div>
+			</div>
 
 		</div>
 	</div>
