--- a/app/templates/sales_report.html
+++ b/app/templates/sales_report.html
@@ -20,7 +20,7 @@
 		  
 			<div class="card user-data-card">
 				<div class="card-body">		  
-						<form method="POST" enctype="multipart/form-data">
+						<form  action="{{ url_for('main.sales_report') }}" method="POST" enctype="multipart/form-data">
 							<div class="mb-3">
 								<div class="title mb-2"><i class="lni lni-envelope"></i><span>Start Date</span></div>
 								<input type="date" class="form-control" id="start_date" name="start_date" required>
